--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Nanu Recipes</h1>
     <a href = "recipes/pancakes.html">Pancakes</a>
 </body>
 </html>
